--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,116 +1,118 @@
 {
-  "headings": {
-    "main": "Добро пожаловать на нашу главную страницу!"
-  },
-  "navigation": {
-    "home": "Главная",
-    "contact": "Контакты",
-    "settings": "Настройки",
-    "recommendations": "Рекомендации",
-    "guides": "Руководства"
-  },
-  "buttons": {
-    "change-language": "Сменить язык",
-    "load-more": "Показать больше",
-    "refresh": "Обновить страницу",
-    "submit": "Отправить"
-  },
-  "settings": {
-    "alert": {
-      "label": "Страница настроек",
-      "description": "Эта страница демонстрирует, как использовать Pinia для управления состоянием приложения."
-    },
-    "theme": {
-      "label": "Тема оформления",
-      "description": "Выберите стиль оформления для приложения"
-    },
-    "color": {
-      "label": "Цветовая палитра",
-      "description": "Настройте цветовую схему приложения"
-    },
-    "language": {
-      "label": "Язык интерфейса",
-      "description": "Выберите язык, который вам удобен"
-    },
-    "title": "Настройки"
-  },
-  "auth": {
-    "alert": {
-      "label": "Страница аутентификации",
-      "description": "Эта страница демонстрирует, как использовать Supabase для аутентификации."
-    },
-    "labels": {
-      "email": "Электронная почта",
-      "password": "Пароль",
-      "confirm-password": "Подтвердите пароль"
-    },
-    "buttons": {
-      "login": "Войти в аккаунт",
-      "register": "Создать аккаунт",
-      "submit": "Отправить данные",
-      "sign-out": "Выйти из аккаунта"
-    },
-    "login": {
-      "description": "Введите свои данные для входа в систему"
-    },
-    "register": {
-      "description": "Создайте новый аккаунт за пару минут"
-    },
-    "validation": {
-      "required": "Это поле обязательно для заполнения",
-      "email": "Введите корректный адрес электронной почты",
-      "password": "Пароль должен содержать минимум 6 символов"
-    }
-  },
-  "scaffold-page": {
-    "heading": "{appName} — это мощный шаблон Nuxt для быстрого старта вашего проекта.",
-    "description": "Из коробки поддержка Supabase, интернационализация (i18n) и готовые базовые компоненты.",
-    "features": {
-      "heading": "Что внутри?",
-      "description": "Все, что нужно для быстрого старта",
-      "supabase": "Интеграция с Supabase",
-      "base-components": "Готовые базовые компоненты",
-      "i18n": "Поддержка нескольких языков"
-    },
-    "usage": {
-      "heading": "Как начать?",
-      "description": "Простые шаги для начала работы",
-      "install": "Установите шаблон",
-      "run": "Запустите сервер разработки",
-      "start": "Начните создавать своё приложение"
-    },
-    "documentation": {
-      "heading": "Документация",
-      "description": "Полезные материалы для работы с шаблоном",
-      "read": "Ознакомьтесь с документацией",
-      "explore": "Изучите исходный код",
-      "contribute": "Присоединяйтесь к разработке"
-    },
-    "essential-documentation": {
-      "heading": "Полезные ссылки",
-      "description": "Изучите официальную документацию инструментов, таких как Nuxt, Nuxt UI и Supabase, чтобы максимально эффективно использовать шаблон."
-    }
-  },
-  "recommendations": {
-    "alert": {
-      "label": "Страница рекомендаций",
-      "description": "Эта страница демонстрирует, как использовать API с Nitro Server."
-    },
-    "heading": "Рекомендации",
-    "description": "Читайте последние рекомендации.",
-    "read": "Прочитать рекомендации",
-    "explore": "Изучить рекомендации",
-    "contribute": "Присоединяйтесь к разработке"
-  },
-  "guides": {
-    "alert": {
-      "label": "Страница руководств",
-      "description": "Эта страница демонстрирует, как использовать API с Nitro Server."
-    },
-    "heading": "Руководства",
-    "description": "Читайте последние руководства.",
-    "read": "Прочитать руководство",
-    "explore": "Изучить руководство",
-    "contribute": "Присоединяйтесь к разработке"
-  }
+	"headings": {
+		"main": "Добро пожаловать на нашу главную страницу!"
+	},
+	"navigation": {
+		"home": "Главная",
+		"contact": "Контакты",
+		"settings": "Настройки",
+		"recommendations": "Рекомендации",
+		"guides": "Руководства"
+	},
+	"buttons": {
+		"change-language": "Сменить язык",
+		"load-more": "Показать больше",
+		"refresh": "Обновить страницу",
+		"submit": "Отправить"
+	},
+	"settings": {
+		"alert": {
+			"label": "Страница настроек",
+			"description": "Эта страница демонстрирует, как использовать Pinia для управления состоянием приложения."
+		},
+		"theme": {
+			"label": "Тема оформления",
+			"description": "Выберите стиль оформления для приложения"
+		},
+		"color": {
+			"label": "Цветовая палитра",
+			"description": "Настройте цветовую схему приложения"
+		},
+		"language": {
+			"label": "Язык интерфейса",
+			"description": "Выберите язык, который вам удобен"
+		},
+		"title": "Настройки"
+	},
+	"auth": {
+		"alert": {
+			"label": "Страница аутентификации",
+			"description": "Эта страница демонстрирует, как использовать Supabase для аутентификации."
+		},
+		"labels": {
+			"email": "Электронная почта",
+			"password": "Пароль",
+			"confirm-password": "Подтвердите пароль"
+		},
+		"buttons": {
+			"login": "Войти в аккаунт",
+			"register": "Создать аккаунт",
+			"submit": "Отправить данные",
+			"sign-out": "Выйти из аккаунта"
+		},
+		"login": {
+			"description": "Введите свои данные для входа в систему"
+		},
+		"register": {
+			"description": "Создайте новый аккаунт за пару минут"
+		},
+		"validation": {
+			"required": "Это поле обязательно для заполнения",
+			"email": "Введите корректный адрес электронной почты",
+			"password": "Пароль должен содержать минимум 6 символов"
+		}
+	},
+	"scaffold-page": {
+		"heading": "{appName} — это мощный шаблон Nuxt для быстрого старта вашего проекта.",
+		"description": "Из коробки поддержка Supabase, интернационализация (i18n) и готовые базовые компоненты.",
+		"features": {
+			"heading": "Что внутри?",
+			"description": "Все, что нужно для быстрого старта",
+			"supabase": "Интеграция с Supabase",
+			"base-components": "Готовые базовые компоненты",
+			"i18n": "Поддержка нескольких языков"
+		},
+		"usage": {
+			"heading": "Как начать?",
+			"description": "Простые шаги для начала работы",
+			"install": "Установите шаблон",
+			"run": "Запустите сервер разработки",
+			"start": "Начните создавать своё приложение"
+		},
+		"documentation": {
+			"heading": "Документация",
+			"description": "Полезные материалы для работы с шаблоном",
+			"read": "Ознакомьтесь с документацией",
+			"explore": "Изучите исходный код",
+			"contribute": "Присоединяйтесь к разработке"
+		},
+		"essential-documentation": {
+			"heading": "Полезные ссылки",
+			"description": "Изучите официальную документацию инструментов, таких как Nuxt, Nuxt UI и Supabase, чтобы максимально эффективно использовать шаблон."
+		}
+	},
+	"recommendations": {
+		"alert": {
+			"label": "Страница рекомендаций",
+			"description": "Эта страница демонстрирует, как использовать API с Nitro Server."
+		},
+		"heading": "Рекомендации",
+		"description": "Читайте последние рекомендации.",
+		"read": "Прочитать рекомендации",
+		"explore": "Изучить рекомендации",
+		"contribute": "Присоединяйтесь к разработке"
+	},
+	"guides": {
+		"alert": {
+			"label": "Страница руководств",
+			"description": "Эта страница демонстрирует, как использовать API с Nitro Server."
+		},
+		"heading": "Руководства",
+		"description": "Читайте последние руководства.",
+		"read": "Прочитать руководство",
+		"explore": "Изучить руководство",
+		"contribute": "Присоединяйтесь к разработке",
+		"total": "Общий",
+		"navigate": "К гайду"
+	}
 }
