feat: enhance localization support by adding new keys for last-updated and locale in German, Japanese, and Russian translations; remove unused Guide type definition

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -113,6 +113,8 @@
 		"explore": "Anleitungen erkunden",
 		"contribute": "Beteiligen Sie sich am Projekt",
 		"total": "Gesamt",
-		"navigate": "Anleitung"
+		"navigate": "Anleitung",
+		"last-updated": "Zuletzt aktualisiert",
+		"locale": "Gebietsschema"
 	}
 }
