--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -113,6 +113,8 @@
 		"explore": "Изучить руководство",
 		"contribute": "Присоединяйтесь к разработке",
 		"total": "Общий",
-		"navigate": "К гайду"
+		"navigate": "К гайду",
+		"last-updated": "Последнее обновлено",
+		"locale": "Локаль"
 	}
 }
