--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -103,7 +103,8 @@
 		"contribute": "Contribute to the project",
 		"search": {
 			"placeholder": "Search  recommendations",
-			"clear": "Clear input"
+			"clear": "Clear input",
+			"reset-to-default": "Reset to default"
 		}
 	},
 	"guides": {
